fixed slider extra padding because of scrollbar gutter

--- a/css/src/data-attributes/slider.css
+++ b/css/src/data-attributes/slider.css
@@ -2,8 +2,6 @@
   :where([data-is="slider"]) {
     display: grid;
     height: max-content;
-    scrollbar-gutter: both-edges stable;
-
 
     &:is([data-variant="horizontal"]) {
       grid-auto-flow: column;
